--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,35 @@ playground.xcworkspace
 
 # CocoaPods
 Pods/
+
+# Carthage
+Carthage/Build
+Carthage/Checkouts
+
+# fastlane
+fastlane/report.xml
+
+# development
+
+logs/*
+
+# AppCode
+
+.idea/
+
+# fastlane
+#
+# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
+# screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://docs.fastlane.tools/best-practices/source-control/#source-control
+
+fastlane/report.xml
+fastlane/README.md
+fastlane/Preview.html
+fastlane/screenshots/**/*.png
+fastlane/test_output
+
+## GitLab CI
+.bundle/
+vendor/
